# Ravencap

./: .gitignore  .markdownlintignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FORMAT.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/ravencap-cli/: Cargo.toml  README.md
crates/ravencap-cli/src/: cli.rs  commands.rs  main.rs  output.rs  secrets.rs
crates/ravencap-cli/tests/: managed_output.rs
crates/ravencap-core/: Cargo.toml  README.md
crates/ravencap-core/src/: archive.rs  decrypt.rs  encrypt.rs  error.rs  inspect.rs  lib.rs  manifest.rs  paths.rs  raw_stream.rs
crates/ravencap-core/tests/: archive_manifest.rs  library_api.rs  malicious_inputs.rs  stream_roundtrip.rs  test_vectors.rs
crates/ravencap-format/: Cargo.toml  README.md
crates/ravencap-format/src/: constants.rs  manifest.rs  parser.rs  prelude.rs
crates/ravencap-testkit/: Cargo.toml  README.md
crates/ravencap-testkit/src/: lib.rs
crates/rustyarchive-cli/: Cargo.toml
crates/rustyarchive-cli/src/: main.rs
crates/rustyarchive-core/: Cargo.toml
crates/rustyarchive-core/src/: archive.rs  decrypt.rs  encrypt.rs  error.rs  inspect.rs  lib.rs  paths.rs  raw_stream.rs
crates/rustyarchive-core/tests/: stream_roundtrip.rs
crates/rustyarchive-format/: Cargo.toml
crates/rustyarchive-format/src/: lib.rs
crates/rustyarchive-testkit/: Cargo.toml
crates/rustyarchive-testkit/src/: lib.rs
docs/: examples.md  file-format-v1.md  release.md  threat-model.md  user-guide.md  v1-closure-plan.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/archive_path_validator/: reserved_name.txt  traversal.txt  unsafe_symlink.txt  windows_drive.txt
fuzz/corpus/manifest_parser/: duplicate_paths.json  invalid_json.json  unsafe_symlink.json
fuzz/fuzz_targets/: archive_path_validator.rs  manifest_parser.rs  ravp_prelude_parser.rs  tar_entry_path_validator.rs
scripts/: interop-age-rage.ps1
tests/: archive_roundtrip.rs  cli_roundtrip.rs  inspect.rs  malicious_inputs.rs  stream_roundtrip.rs
tests/vectors/: README.md  archive-default.rav  archive-public-key.rav  non-ravp-age.rav  passphrase.txt  raw-none.ravp
tests/vectors/identity/: alice.ravkey  alice.ravpub
tests/vectors/inspect/: archive-default.json
tests/vectors/source/: non-ravp.txt
tests/vectors/source/project/: README.md
