[workspace]
members = [
    "crates/ravencap-cli",
    "crates/ravencap-core",
    "crates/ravencap-format",
    "crates/ravencap-testkit",
]
resolver = "2"

[workspace.package]
version = "2.0.1"
edition = "2024"
license = "MIT"
rust-version = "1.88"
repository = "https://github.com/Hall9000VS/Ravencap"

[workspace.dependencies]
age = "0.11"
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "2"
unicode-normalization = "0.1"
walkdir = "2"
zeroize = "1"
zstd = "0.13"
