[package]
name = "ravencap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "ravencap"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rpassword.workspace = true
ravencap-core = { path = "../ravencap-core", version = "1.0.1" }
serde_json.workspace = true
tempfile.workspace = true
