[package]
name = "ravencap-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
age.workspace = true
ravencap-format = { path = "../ravencap-format" }
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
walkdir.workspace = true
zstd.workspace = true

[dev-dependencies]
