[package]
name = "ravencap-format"
description = "Format types and parsers for Ravencap encrypted archive payloads."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
