[package]
name = "ravencap-testkit"
description = "Shared test fixtures and helpers for Ravencap crates."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
ravencap-format = { path = "../ravencap-format", version = "2.0.1" }
